--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -13,16 +13,16 @@
 <div class="container">
     <div class="row">
         <div class="col-6 offset-3">
-            <form th:action="@{/result}" method="post">
+            <form th:action="@{/result}" method="post" th:object="${questionForm}">
                 <h1>Вопросы категории "<span class="text-primary" th:text="${category.displayName}"></span>"</h1>
                 <div th:each="question, questionStat : ${questions}" class="border rounded mt-3 p-3">
                     <h3 class="text-primary" th:text="${questionStat.count + '. ' + question.text}"></h3>
-                    <input type="hidden" name="questionId" th:value="${question.id}">
+                    <input type="hidden" th:name="|userAnswers[${questionStat.index}].questionId|" th:value="${question.id}">
                     <div th:if="${question.options}">
                         <div th:each="option, optionStat : ${question.options}">
                             <input type="radio" class="form-check-input"
                                    th:id="${'q' + question.id + '-' + optionStat.index}"
-                                   name="answer"
+                                   th:name="|userAnswers[${questionStat.index}].answer|"
                                    th:value="${option}"
                                    required>
                             <label th:for="${'q' + question.id + '-' + optionStat.index}" class="form-check-label"
@@ -33,13 +33,12 @@
                         <textarea cols="30"
                                   rows="10"
                                   class="form-control"
-                                  th:name="'answer[' + ${questionStat.index} + ']'"
-                                  th:value="${option}"
+                                  th:name="|userAnswers[${questionStat.index}].answer|"
                                   required></textarea>
                     </div>
-                    <div class="d-grid mt-3">
-                        <button type="submit" class="btn btn-success">Завершить тест</button>
-                    </div>
+                </div>
+                <div class="d-grid mt-3">
+                    <button type="submit" class="btn btn-success">Завершить тест</button>
                 </div>
             </form>
         </div>
